# django-storages-practice

./: README.md  pyproject.toml
src/: db.sqlite3  manage.py
src/django_storages_practice/: asgi.py  settings.py  urls.py  wsgi.py
src/samples/: models.py  serializers.py  urls.py  views.py
src/samples/migrations/: 0001_initial.py
